# logbook-automation

./: .gitignore  README.md  app.py  database.py  log_generator.py  main.py  models.py  my_record_book.xlsx  pyproject.toml
frontend/: UI_GUIDE.md
frontend/src/: App.css  App.jsx  DesignTokens.css  index.css
frontend/src/components/: RoleSelection.jsx  StudentDashboard.jsx  SupervisorDashboard.jsx
scripts/: app.py
